[project]
name = "assetbot"
version = "0.1.0"
authors = [
	{ name="Anamitra Ghorui", email="Anamitra Ghorui.software@gmail.com" },
]
description = "Automates exports of asset project files to a desired location."
readme = "README.md"
requires-python = ">=3.10.12"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
]
dependencies = [
	"watchdog>=4.0.0",
	"toml>=0.10.2"
]

[project.scripts]
assetbot = "assetbot.assetbot:main"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assetbot"]


[project.urls]
Homepage = "https://github.com/Anamitra Ghorui/assetbot"
Issues = "https://github.com/Anamitra Ghorui/asserbot/issues"
